<resources>
  <string name="commons_facebook">Commons Facebook Page</string>
  <string name="commons_github">Commons GitHub Source Code</string>
  <string name="commons_logo">Commons Logo</string>
  <string name="commons_website">Commons Website</string>
  <string name="exit_location_picker">Exit location picker</string>
  <string name="submit">Submit</string>
  <string name="add_another_description">Add another description</string>
  <string name="add_new_contribution">Add new contribution</string>
  <string name="add_contribution_from_camera">Add contribution from camera</string>
  <string name="add_contribution_from_photos">Add contribution from Photos</string>
  <string name="add_contribution_from_contributions_gallery">Add contribution from previous contributions gallery</string>
  <string name="show_captions">Captions</string>
  <string name="row_item_language_description">Language Description</string>
  <string name="row_item_caption">Caption</string>
  <string name="show_captions_description">Description</string>
  <string name="nearby_row_image">Image</string>
  <string name="nearby_all">All</string>
  <string name="nearby_filter_toggle">Toggle Up</string>
  <string name="nearby_filter_search">Search View</string>
  <string name="nearby_filter_state">Place State</string>
  <string name="appwidget_img">Pic of the Day</string>
  <plurals name="uploads_pending_notification_indicator">
    <item quantity="one">%1$d file uploading</item>
    <item quantity="other">%1$d files uploading</item>
  </plurals>
  <plurals name="contributions_subtitle">
    <item quantity="one">(%1$d)</item>
    <item quantity="other">(%1$d)</item>
  </plurals>
  <string name="starting_uploads">Starting Uploads</string>
  <plurals name="starting_multiple_uploads">
    <item quantity="one">Processing %1$d upload</item>
    <item quantity="other">Processing %1$d uploads</item>
  </plurals>
  <plurals name="multiple_uploads_title">
    <item quantity="one">%1$d upload</item>
    <item quantity="other">%1$d uploads</item>
  </plurals>
  <plurals name="share_license_summary">
    <item quantity="one">This image will be licensed under %1$s</item>
    <item quantity="other">These images will be licensed under %1$s</item>
  </plurals>
  <plurals name="upload_count_title">
    <item quantity="one">%1$d Upload</item>
    <item quantity="other">%1$d Uploads</item>
  </plurals>
  <plurals name="receiving_shared_content">
    <item quantity="one">Receiving shared content. Processing the image might take some time depending on the size of the image and your device</item>
    <item quantity="other">Receiving shared content. Processing the images might take some time depending on the size of the images and your device</item>
  </plurals>
  <string name="navigation_item_explore">Explore</string>
  <string name="preference_category_appearance">Appearance</string>
  <string name="preference_category_general">General</string>
  <string name="preference_category_feedback">Feedback</string>
  <string name="preference_category_privacy">Privacy</string>
  <string name="app_name">Commons</string>
  <string name="menu_settings">Settings</string>
  <string name="intent_share_upload_label">Upload to Commons</string>
  <string name="upload_in_progress">Upload in progress</string>
  <string name="username">Username</string>
  <string name="password">Password</string>
  <string name="login_credential">Log in to your Commons Beta account</string>
  <string name="login">Log in</string>
  <string name="forgot_password">Forgot Password?</string>
  <string name="signup">Sign up</string>
  <string name="logging_in_title">Logging in</string>
  <string name="logging_in_message">Please wait…</string>
  <string name="updating_caption_title">Updating captions and descriptions</string>
  <string name="updating_caption_message">Please wait…</string>
  <string name="login_success">Log-in success!</string>
  <string name="login_failed">Log-in failed!</string>
  <string name="upload_failed">File not found. Please try another file.</string>
  <string name="retry_limit_reached">Maximum retry limit reached! Please cancel the upload and try again</string>
  <string name="unrestricted_battery_mode">Turn battery optimization off?</string>
  <string name="suggest_unrestricted_mode">Uploading more than 3 images works more reliably when the battery optimization is turned off. Please turn battery optimization off for the Commons app from the settings for a smooth upload experience. \n\nPossible steps to turn battery optimization off:\n\nStep 1: Tap on the \'Settings\' button below.\n\nStep 2: Switch from \'Not optimized\' to \'All apps\'.\n\nStep 3: Search for \"Commons\" or \"fr.free.nrw.commons\".\n\nStep 4: Tap it and select \'Don\'t optimize\'.\n\nStep 5: Press \'Done\'.</string>
  <string name="authentication_failed">Authentication failed. Please log in again.</string>
  <string name="uploading_started">Upload started!</string>
  <string name="uploading_queued">Upload queued (limited connection mode enabled)</string>
  <string name="upload_completed_notification_title">%1$s uploaded!</string>
  <string name="upload_completed_notification_text">Tap to view your upload</string>
  <string name="upload_progress_notification_title_start">Uploading file: %1$s</string>
  <string name="upload_progress_notification_title_in_progress">%1$s uploading</string>
  <string name="upload_progress_notification_title_finishing">Finishing uploading %1$s</string>
  <string name="upload_failed_notification_title">Failed to upload %1$s</string>
  <string name="upload_paused_notification_title">Uploading %1$s paused</string>
  <string name="upload_failed_notification_subtitle">Tap to view</string>
  <string name="upload_paused_notification_subtitle">Tap to view</string>
  <string name="error_invalid_login_token">The server failed to retrieve the session token.</string>
  <string name="error_unknown_host">Unable to reach the server. Please check your internet connection.</string>
  <string name="error_socket_timeout">The socket operation timed out while uploading.</string>
  <string name="error_connect_exception">The connection was interrupted while uploading.</string>
  <string name="error_unexpected">An unexpected error occurred while uploading.</string>
  <string name="title_activity_contributions">My Recent Uploads</string>
  <string name="contribution_state_queued">Queued</string>
  <string name="contribution_state_failed">Failed</string>
  <string name="contribution_state_in_progress">%1$d%% complete</string>
  <string name="contribution_state_starting">Uploading</string>
  <string name="menu_from_gallery">From Gallery</string>
  <string name="menu_from_camera">Take photo</string>
  <string name="menu_nearby">Nearby</string>
  <string name="provider_contributions">My uploads</string>
  <string name="menu_copy_link">Copy link</string>
  <string name="menu_link_copied">The link has been copied to the clipboard</string>
  <string name="menu_share">Share</string>
  <string name="menu_view_file_page">View file page</string>
  <string name="share_title_hint">Caption (Required)</string>
  <string name="add_caption_toast">Please provide a caption for this file</string>
  <string name="share_description_hint">Description</string>
  <string name="menu_about">About</string>
  <string name="menu_feedback">Send Feedback (via Email)</string>
  <string name="menu_retry_upload">Retry</string>
  <string name="menu_cancel_upload">Cancel</string>
  <string name="menu_download">Download</string>
  <string name="preference_theme">Theme</string>
  <string name="welcome_copyright_text">Your images help educate people around the world.</string>
  <string name="menu_refresh">Refresh</string>
  <string name="ok">OK</string>
  <string name="become_a_tester_title">Become a Beta Tester</string>
  <string name="become_a_tester_description">Opt-in to our beta channel on Google Play and get early access to new features and bug fixes</string>
  <string name="cancel">Cancel</string>
  <string name="navigation_item_home">Home</string>
  <string name="navigation_item_nearby">Nearby</string>
  <string name="navigation_item_about">About</string>
  <string name="navigation_item_settings">Settings</string>
  <string name="navigation_item_feedback">Feedback</string>
  <string name="navigation_item_logout">Logout</string>
  <string name="navigation_item_info">Tutorial</string>
  <string name="navigation_item_review">Review</string>
  <string name="use_external_storage">Save In-app shots</string>
  <string name="use_external_storage_summary">Save pictures taken with the in-app camera to your device storage</string>
  <string name="send_log_file">Send log file</string>
  <string name="send_log_file_description">Send log file to developers via email to help debug problems with the app. Note: logs may potentially contain identifying information</string>
  <string name="navigation_item_login">Log in</string>
  <string name="menu_set_wallpaper">Set as wallpaper</string>
  <string name="Achievements">Achievements</string>
  <string name="preference_author_name_toggle">Use custom author name</string>
  <string name="preference_author_name_toggle_summary">Use a custom author name instead of your username while uploading photos</string>
  <string name="preference_author_name">Custom author name</string>
  <string name="display_nearby_notification">Display nearby notification</string>
  <string name="display_nearby_notification_summary">Show in-app notification for the nearest place that needs pictures</string>
  <string name="menu_bookmark">Add/Remove to bookmarks</string>
  <string name="display_location_permission_title">Ask for location permission</string>
  <string name="display_location_permission_explanation">Ask for location permission when needed for nearby notification card view feature.</string>
  <string name="display_campaigns">Display campaigns</string>
  <string name="display_campaigns_explanation">See the ongoing campaigns</string>
  <string name="manage_exif_tags">Manage EXIF Tags</string>
  <string name="manage_exif_tags_summary">Select which EXIF tags to keep in uploads</string>
  <string name="default_description_language">Default description language</string>
  <string name="confirm">Confirm</string>
  <string name="instructions_title">Instructions</string>
  <string name="wikipedia_instructions_step_1">1. Use the following wikitext:</string>
  <string name="wikipedia_instructions_step_2">2. Clicking on Confirm will open the Wikipedia article</string>
  <string name="wikipedia_instructions_step_3">3. Find an appropriate section in the article for your image</string>
  <string name="wikipedia_instructions_step_4">4. Click on the Edit icon (the one like a pencil) for that section.</string>
  <string name="wikipedia_instructions_step_5">5. Paste the wikitext in the appropriate place.</string>
  <string name="wikipedia_instructions_step_6">6. Edit the wikitext for appropriate positioning, if necessary. For more information, see &lt;a href="https://en.wikipedia.org/wiki/Wikipedia:Manual_of_Style/Images#How_to_place_an_image"&gt;here&lt;/a&gt;.</string>
  <string name="wikipedia_instructions_step_7">7. Publish the article</string>
  <string name="copy_wikicode_to_clipboard">Copy wikitext to clipboard</string>
  <string name="welcome_custom_selector_ok">Awesome</string>
  <string name="copyright_popup">Please only upload pictures you have taken by yourself. Uploaders of copyrighted images will be blocked. This applies to the beta flavor too. Thank you for testing the app!</string>
  <string name="welcome_to_full_screen_mode_text">Welcome to Full-Screen Selection Mode</string>
  <string name="full_screen_mode_zoom_info">Use two fingers to zoom in and out.</string>
  <string name="full_screen_mode_features_info">Swipe fast and long to perform these actions: \n- Left/Right: Go to previous/next \n- Up: Select\n- Down: Mark as not for upload.</string>
</resources>