<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
      android:title="@string/preference_category_appearance">

        <ListPreference
            android:key="appThemePref"
            android:title= "@string/preference_theme"
            android:entries="@array/pref_theme_entries"
            android:entryValues="@array/pref_theme_entries_values"
            app:useSimpleSummaryProvider="true"
            android:defaultValue="0" />

    </PreferenceCategory>

    <PreferenceCategory
      android:title="@string/preference_category_general">

        <SwitchPreference
          android:defaultValue="true"
          android:key="useExternalStorage"
          android:summary="@string/use_external_storage_summary"
          android:title="@string/use_external_storage" />

        <EditTextPreference
          android:defaultValue="100"
          android:inputType="number"
          android:key="uploads"
          android:maxLength="3"
          android:title="@string/set_limit" />

        <ListPreference
          android:key="descriptionDefaultLanguagePref"
          android:summary="English"
          android:title="@string/default_description_language" />

        <SwitchPreference
          android:key="useAuthorName"
          android:summary="@string/preference_author_name_toggle_summary"
          android:title="@string/preference_author_name_toggle" />

        <EditTextPreference
          android:key="authorName"
          android:summary="@string/preference_author_name_summary"
          android:title="@string/preference_author_name" />

        <SwitchPreference
          android:defaultValue="true"
          android:key="displayNearbyCardView"
          android:summary="@string/display_nearby_notification_summary"
          android:title="@string/display_nearby_notification" />

        <SwitchPreference
          android:defaultValue="true"
          android:key="displayLocationPermissionForCardView"
          android:summary="@string/display_location_permission_explanation"
          android:title="@string/display_location_permission_title" />
        <SwitchPreference
          android:defaultValue="true"
          android:key="displayCampaignsCardView"
          android:summary="@string/display_campaigns_explanation"
          android:title="@string/display_campaigns" />

    </PreferenceCategory>

    <PreferenceCategory
      android:title="@string/preference_category_privacy">

        <MultiSelectListPreference
          android:entries="@array/pref_exifTag_entries"
          android:entryValues="@array/pref_exifTag_values"
          android:key="managed_exif_tags"
          android:summary="@string/manage_exif_tags_summary"
          android:title="@string/manage_exif_tags" />

    </PreferenceCategory>

    <!-- The key 'allowGps' was used before and has since been removed based on the discussion at #1599.
          Do not reuse this key unless you revive the same feature with the changes mentioned at #1599.-->

    <PreferenceCategory
      android:title="@string/preference_category_feedback">

        <Preference
          android:key="becomeBetaTester"
          android:summary="@string/become_a_tester_description"
          android:title="@string/become_a_tester_title"/>

        <Preference
          android:key="sendLogFile"
          android:summary="@string/send_log_file_description"
          android:title="@string/send_log_file" />

    </PreferenceCategory>
</PreferenceScreen>