<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/navigation_item_home"/>

    <item
        android:id="@+id/action_nearby"
        android:icon="@drawable/ic_location_black_24dp"
        android:title="@string/navigation_item_nearby"/>

    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_info_outline_black_24dp"
        android:title="@string/navigation_item_about"/>

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/navigation_item_settings"/>

    <item
        android:id="@+id/action_introduction"
        android:icon="@drawable/ic_info_outline_black_24dp"
        android:title="@string/navigation_item_info"/>

    <item
        android:id="@+id/action_feedback"
        android:icon="@drawable/ic_feedback_black_24dp"
        android:title="@string/navigation_item_feedback"/>

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/navigation_item_logout"/>

</menu>
