<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_from_camera"
          android:title="@string/menu_from_camera"
          android:orderInCategory="100"
          app:showAsAction="ifRoom|withText"
          android:icon="@android:drawable/ic_menu_camera"
            />
    <item android:id="@+id/menu_from_gallery"
        android:title="@string/menu_from_gallery"
        android:orderInCategory="200"
        app:showAsAction="ifRoom|withText"
        android:icon="@android:drawable/ic_menu_gallery"
            />
    <item android:id="@+id/menu_settings"
          android:title="@string/menu_settings"
          app:showAsAction="never"
          />
    <item android:id="@+id/menu_about"
          android:title="@string/menu_about"
          app:showAsAction="never"
          />
    <item android:id="@+id/menu_feedback"
          android:title="@string/menu_feedback"
          app:showAsAction="never"
            />
    <item android:id="@+id/menu_nearby"
        android:title="@string/menu_nearby"
        app:showAsAction="never"
        />
    <item android:id="@+id/menu_theme_toggle"
        android:title="Night mode"
        android:actionLayout="@layout/theme_toggle_layout"
        app:showAsAction="never"
        />
    <item android:id="@+id/menu_refresh"
          android:title="@string/menu_refresh"
          app:showAsAction="never"
          />

</menu>
