<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_bookmark_current_image"
        android:icon="@drawable/ic_round_star_border_24px"
        android:title="@string/menu_bookmark"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_share_current_image"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/menu_share"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_browser_current_image"
        android:title="@string/menu_open_in_browser"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_download_current_image"
        android:title="@string/menu_download"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_set_as_wallpaper"
        android:title="@string/menu_set_wallpaper"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_retry_current_image"
        android:enabled="false"
        android:icon="@drawable/ic_undo_white_24dp"
        android:title="@string/menu_retry_upload"
        android:visible="false"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_cancel_current_image"
        android:enabled="false"
        android:title="@string/menu_cancel_upload"
        android:visible="false"
        app:showAsAction="never" />

</menu>