<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:layout_marginTop="?attr/actionBarSize"
  tools:context="fr.free.nrw.commons.MoreFragment">

  <TextView
    android:id="@+id/more_achievements"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:drawableStart="@drawable/ic_feedback_black_24dp"
    android:drawablePadding="12dp"
    android:padding="8dp"
    android:text="@string/Achievements"
    android:textSize="18sp" />

  <TextView
    android:id="@+id/more_peer_review"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:drawableStart="@drawable/ic_check_black_24dp"
    android:drawablePadding="12dp"
    android:padding="8dp"
    android:text="@string/navigation_item_review"
    android:textSize="18sp" />

  <TextView
    android:id="@+id/more_settings"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:drawableStart="@drawable/ic_settings_black_24dp"
    android:drawablePadding="12dp"
    android:padding="8dp"
    android:text="@string/menu_settings"
    android:textSize="18sp" />

  <TextView
    android:id="@+id/more_tutorial"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:drawableStart="@drawable/ic_help_black_24dp"
    android:drawablePadding="12dp"
    android:padding="8dp"
    android:text="@string/navigation_item_info"
    android:textSize="18sp" />

  <TextView
    android:id="@+id/more_feedback"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:drawableLeft="@drawable/ic_feedback_black_24dp"
    android:drawablePadding="12dp"
    android:padding="8dp"
    android:text="@string/navigation_item_feedback"
    android:textSize="18sp" />

  <TextView
    android:id="@+id/more_about"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:drawableStart="@drawable/ic_info_outline_24dp"
    android:drawablePadding="12dp"
    android:padding="8dp"
    android:text="@string/navigation_item_about"
    android:drawableTint="@color/black"
    android:textSize="18sp" />


  <TextView
    android:id="@+id/more_logout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:drawableStart="@drawable/ic_exit_to_app_black_24dp"
    android:drawablePadding="12dp"
    android:padding="8dp"
    android:text="@string/navigation_item_logout"
    android:textSize="18sp" />

</LinearLayout>
