<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="?attr/actionBarSize"
    android:theme="?attr/more_bottom_sheet_style"
    android:orientation="vertical">

    <TextView
        android:id="@+id/more_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:drawableStart="@drawable/ic_settings_black_24dp"
        android:drawablePadding="12dp"
        android:padding="8dp"
        android:text="@string/menu_settings"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/more_tutorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:drawableStart="@drawable/ic_help_black_24dp"
        android:drawablePadding="12dp"
        android:padding="8dp"
        android:text="@string/navigation_item_info"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/more_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:drawableLeft="@drawable/ic_feedback_black_24dp"
        android:drawablePadding="12dp"
        android:padding="8dp"
        android:text="@string/navigation_item_feedback"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/more_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:drawableStart="@drawable/ic_info_outline_24dp"
        android:drawablePadding="12dp"
        android:padding="8dp"
        android:text="@string/navigation_item_about"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/more_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="12dp"
        android:padding="8dp"
        android:text="@string/navigation_item_login"
        android:textSize="18sp" />
</LinearLayout>
