<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_height="wrap_content"
  android:layout_width="match_parent"
  android:layout_margin="@dimen/dimen_10">

  <ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical" >

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:text="@string/welcome_to_full_screen_mode_text"
        android:textSize="@dimen/normal_text"
        android:textStyle="bold"/>

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10"
        android:text="@string/full_screen_mode_zoom_info"
        android:textSize="@dimen/description_text_size"
        android:textStyle="bold"/>

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10"
        android:layout_marginEnd="@dimen/dimen_10"
        android:layout_marginStart="@dimen/dimen_10"
        android:text="@string/full_screen_mode_features_info"
        android:textSize="@dimen/description_text_size"
        android:textStyle="bold"/>

      <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ok"
        android:layout_marginHorizontal="@dimen/dimen_40"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/welcome_custom_selector_ok"
        />
    </LinearLayout>
  </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>